# motip

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: coverage-test.yml  lint.yml  test.yml
data/biggest_intermediate_memory_analysis/10_11_20_0_25_4_4_12_12_2_2/: data.csv  summary_by_size.csv
data/biggest_intermediate_memory_analysis/1_11_20_0_25_4_4_12_12_2_2/: data.csv  summary_by_size.csv
data/biggest_intermediate_memory_analysis/1_5_20_0_10_4_4_12_12_2_2/: data.csv  summary_by_size.csv
data/biggest_intermediate_memory_analysis/1_7_20_0_20_3_5_3_5_0_5/: data.csv
data/biggest_intermediate_memory_analysis/2_5_20_0_10_4_4_12_12_2_2/: data.csv  summary_by_size.csv
data/biggest_intermediate_memory_analysis/4_5_20_0_10_4_4_12_12_2_2/: data.csv  summary_by_size.csv
data/greedy_strategy_benchmark/: benchmark_results.csv
data/initial_memory_prediction_comparison/: data.csv
data/memory_strategies_comparison/: data.csv
data/peak_memory_prediction_comparison/: data.csv
data/theoretical_greedy_strategy_benchmark/: benchmark_results.csv
scripts/: biggest_intermediate_memory_analysis.py  greedy_strategy_benchmark.py  initial_memory_prediction_benchmark.py  memory_comparison.py  peak_memory_prediction_benchmark.py  sweep_script.py
src/: tensor.py
src/contraction/: __init__.py  path.py  tensor.py  tensor_network.py  tree.py
src/memory/: __init__.py  calculator.py  memory.py  utils.py
src/operations/: __init__.py  base.py  dummy.py  utils.py
src/permutation/: __init__.py  tensor.py  utils.py
src/tensor_network/: __init__.py  builder.py  tn.py
test/: __init__.py  test_tensor.py
test/contraction/: __init__.py  test_path.py  test_tensor.py  test_tensor_network.py  test_tree.py
test/memory/: test_memory.py  test_memory_utils.py
test/operations/: __init__.py  test_dummy.py  test_utils.py
test/permutation/: __init__.py  test_tensor.py  test_tensor_operation.py  test_utils.py
test/tensor_network/: __init__.py  test_tensor_network.py  test_tn_builder.py
(+83 files in other folders)
