[project]
name = "motip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cotengra>=0.7.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pyrefly>=0.54.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "scipy>=1.17.1",
]

[tool.ruff]
line-length = 100

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
