[project]
name = "motip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cotengra>=0.7.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
]
license = "MIT"
authors = [
    { name = "Fam Shihata", email = "fam@awadlouis.com" },
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]

[dependency-groups]
dev = [
    "pyrefly>=0.54.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
]
