[project]
name = "motip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cotengra>=0.7.5",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.2",
    "optuna>=4.7.0",
    "scipy>=1.17.1",
]
license = "MIT"
authors = [
    { name = "Fam Shihata", email = "fam@awadlouis.com" },
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "D", "I"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
files = [
    "**/*.py",
]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
